Fixed arrows float

--- a/index.html
+++ b/index.html
@@ -483,11 +483,15 @@
       </div>
 
       <div id="footer-carousel" class="row row-no-padding">
+<!--
         <div class="col-md-1">
-          <span class="prev pull-right"></span>
+
         </div>
-        <div class="col-md-10">
-          <div class="carousel">
+-->
+        <div class="col-md-12">
+          <div class="carousel text-center">
+            <span class="prev"></span>
+            <span class="next"></span>
             <div class="cycle-slideshow"
               data-cycle-slides="> a"
               data-cycle-fx=carousel
@@ -509,9 +513,10 @@
             </div>
           </div>
         </div>
+<!--
         <div class="col-md-1">
-          <span class="next pull-left"></span>
         </div>
+-->
       </div>
 
     </div>
