--- a/index.html
+++ b/index.html
@@ -390,11 +390,11 @@
 
                   <div class="col-md-6">
                     <ul class="iconbar text-right">
-                      <li><a href="#"><i class="icon-home"></i></a></li>
-                      <li><a href="#"><i class="icon-home"></i></a></li>
-                      <li><a href="#"><i class="icon-home"></i></a></li>
-                      <li><a href="#"><i class="icon-home"></i></a></li>
-                      <li><a href="#"><i class="icon-home"></i></a></li>
+                      <li class="active"><a href="#"><i class="icon0"></i></a></li>
+                      <li><a href="#"><i class="icon1"></i></a></li>
+                      <li><a href="#"><i class="icon2"></i></a></li>
+                      <li><a href="#"><i class="icon3"></i></a></li>
+                      <li><a href="#"><i class="icon4"></i></a></li>
                     </ul>
                   </div>
                 </div>
@@ -610,6 +610,13 @@ $(document).ready(function() {
   (function() {
 
     return $('.toggle-date-range li').click(function() {
+      $(this).addClass('active').siblings().removeClass('active');
+    });
+  }).call(this);
+
+  (function() {
+
+    return $('.iconbar li').click(function() {
       $(this).addClass('active').siblings().removeClass('active');
     });
   }).call(this);
